# statsrelay

./: CMakeLists.txt  Cargo.toml  Dockerfile
benches/: statsd_benchmark.rs
examples/: processors-basic.json  tugboat-discovery.json  tugboat-legacy-basic.json
src/: admin.rs  backends.rs  config.rs  discovery.rs  elide.c  elide.h  hashmap.c  hashmap.h  lib.rs  log.c  log.h  main.c  metrics.rs  rand.c  rand.h  sampling.c  sampling.h  shard.rs  stats.c  stats.h  stats.rs  statsd_backend.rs  statsd_client.rs  statsd_proto.rs  statsd_server.rs  statsdproto.rs  validate.c
src/cmd/: loadgen.rs  statsrelay.rs
src/cuckoofilter/: mod.rs
src/processors/: cardinality.rs  mod.rs  regex_filter.rs  sampler.rs  tag.rs
src/tests/: test_validate.c
tests/: elision.json  test_endtoend.py
