[package]
name = "statsrelay"
version = "3.1.0-dev"
authors = ["Yann Ramin <github@theatr.us>"]
edition = "2018"
description = "Swiss army knife for aggregation, filtering, relaying, sharding of statsd, prometheus, and other metrics systems"
license = "MIT"
keywords = ["statsd", "metrics", "aggregation"]
categories = ["development-tools"]
repository = "https://github.com/lyft/statsrelay"

[[bin]]
name = "statsrelay"
path = "src/cmd/statsrelay.rs"

[[bin]]
name = "sr-loadgen"
path = "src/cmd/loadgen.rs"

[dependencies]
murmur3 = "0.5"
tokio = { version = "1", features = ["full", "parking_lot"] }
tokio-stream = "0"
futures = "0.3"
hyper = { version = "0.14", features = ["server", "client", "runtime", "http2", "stream", "http1"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
memchr = "2"
stream-cancel = "0.8"
bytes = "1"
parking_lot = "0.11"
regex = "1"
chrono = "0.4"
dashmap = "4"
async-stream = "0.3"
lexical = "5"

# For discovery
rusoto_core = "0.46"
rusoto_s3 = "0.46"

log = "0.4"
env_logger = "0.8"

# Internal stats
prometheus = "0.11"

# malloc
jemallocator = "0.3.0"

# Samplers
cuckoofilter = "0"
hyperloglog = "1"
ahash = "0.7"
rand = "0.8"

[[bench]]
name = "statsd_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
tempfile = "3.1"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }
